--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
   zoom_tap_animation: ^1.1.0
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
+  open_filex: ^4.4.0
+  dio: ^5.4.3+1
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
